[package]
name = "swc-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_core = { version = "0.78.20", features = [
  "allocator_node",
  "ecma_ast",
  "ecma_ast_serde",
  "common_concurrent",
  "bundler",
  "ecma_loader",
  "ecma_transforms",
  "ecma_visit",
  "ecma_parser",
  "base_node",
  "base_concurrent",
] }
swc_common = { version = "0.31.16"}
swc_ecma_visit = { version = "0.93.2" }
swc_ecma_ast = { version = "0.107.2" }
swc_ecma_parser = { version = "0.136.8" }
swc_node_base = "0.5.8"
swc_ecma_codegen = "0.141.11"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
napi = { version = "2", default-features = false, features = [
  "napi3",
  "serde-json",
] }
string_cache = "0.8.0"